--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -1,5 +1,5 @@
 
-<h1>Edit Author</h1>
+<h1>Edit author</h1>
  
 <%= form_with(model: @author, local: true) do |form| %>
  
@@ -37,5 +37,11 @@
   </p>
  
 <% end %>
- 
-<%= link_to 'Back', authors_path %>
+
+
+<br>
+
+<div>
+    <%= link_to "Show this author", @author %> |
+    <%= link_to "Back to authors", authors_path %>
+</div>
