--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,4 @@
 
 <h1>Paper Management System</h1>
 <%= link_to 'My Authors', controller: 'authors' %>
+<%= link_to 'My Papers', controller: 'papers' %>
