--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -12,7 +12,7 @@
   <% @authors.each do |author| %>
     <tr>
       <td><%= author.name %></td>
-      <td><%= author.homepage %></td>
+      <td><%= link_to author.homepage, author.homepage %></td>
       <td><%= link_to 'Show', author_path(author) %></td>
       <td><%= link_to 'Edit', edit_author_path(author) %></td>
       <td><%= link_to 'Delete', author_path(author), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></td>
