--- a/app/views/papers/_paper.html.erb
+++ b/app/views/papers/_paper.html.erb
@@ -14,4 +14,14 @@
     <%= paper.year %>
   </p>
 
-</div>
+  <% if paper.authors.present? %>
+    <p>
+      <strong>Author(s):</strong>
+      <ul>
+        <% paper.authors.each do |author| %>
+          <li><%= author.name %></li>
+        <% end %>
+      </ul>
+    </p>
+  </div>
+<% end %>
